@@ -27,17 +27,26 @@
 #define EPOXY_B_COLOR 0xb5
 #define RGB_EPOXY RGB(EPOXY_R_COLOR, EPOXY_G_COLOR, EPOXY_B_COLOR)
 
+#define EPOXY_GREY_COLOR ((EPOXY_R_COLOR+EPOXY_G_COLOR+EPOXY_B_COLOR)/3)
+#define RGB_GREY_EPOXY RGB_GREY(EPOXY_GREY_COLOR)
+
 #define DARK_EPOXY_R_COLOR ((EPOXY_R_COLOR * 100) / 110)
 #define DARK_EPOXY_G_COLOR ((EPOXY_G_COLOR * 100) / 110)
 #define DARK_EPOXY_B_COLOR ((EPOXY_B_COLOR * 100) / 110)
 #define RGB_DARK_EPOXY RGB(DARK_EPOXY_R_COLOR, DARK_EPOXY_G_COLOR, DARK_EPOXY_B_COLOR)
+
+#define DARK_EPOXY_GREY_COLOR ((EPOXY_GREY_COLOR * 100) / 110)
+#define RGB_GREY_DARK_EPOXY RGB_GREY(DARK_EPOXY_GREY_COLOR)
 
 #define DARKER_EPOXY_R_COLOR ((DARK_EPOXY_R_COLOR * 100) / 110)
 #define DARKER_EPOXY_G_COLOR ((DARK_EPOXY_G_COLOR * 100) / 110)
 #define DARKER_EPOXY_B_COLOR ((DARK_EPOXY_B_COLOR * 100) / 110)
 #define RGB_DARKER_EPOXY RGB(DARKER_EPOXY_R_COLOR, DARKER_EPOXY_G_COLOR, DARKER_EPOXY_B_COLOR)
 
-struct lstopo_color_palette lstopo_main_palette;
+#define DARKER_EPOXY_GREY_COLOR ((DARK_EPOXY_GREY_COLOR * 100) / 110)
+#define RGB_GREY_DARKER_EPOXY RGB_GREY(DARKER_EPOXY_GREY_COLOR)
+
+struct lstopo_color_palette lstopo_main_palette, lstopo_grey_palette;
 
 void
 lstopo_palette_init(struct lstopo_output *loutput)
@@ -65,11 +74,34 @@ lstopo_palette_init(struct lstopo_output *loutput)
   lstopo_main_palette.binding =          RGB(0, 0xff, 0); /* green */
   lstopo_main_palette.disallowed =       RGB(0xff, 0, 0); /* red */
 
+  memcpy(&lstopo_grey_palette, &lstopo_main_palette, sizeof(lstopo_main_palette));
+  /* replace non-grey colors by some grey */
+  lstopo_grey_palette.package =          RGB_GREY_DARK_EPOXY;
+  lstopo_grey_palette.group_in_package = RGB_GREY_EPOXY;
+  lstopo_grey_palette.die =              RGB_GREY_EPOXY;
+  lstopo_grey_palette.numanode =         RGB_GREY(0xe4);
+  lstopo_grey_palette.memories =         RGB_GREY(0xe8); /* slightly lighter than numanode */
+  lstopo_grey_palette.pcidev =           RGB_GREY_DARKER_EPOXY;
+  lstopo_grey_palette.binding =          RGB_GREY(0xbb);
+  lstopo_grey_palette.disallowed =       RGB_GREY(0x77);
+
 #ifdef HWLOC_HAVE_GCC_W_MISSING_FIELD_INITIALIZERS
 #pragma GCC diagnostic warning "-Wmissing-field-initializers"
 #endif
 
+  /* use the color palette by default */
   loutput->palette = &lstopo_main_palette;
+}
+
+void
+lstopo_palette_select(struct lstopo_output *loutput, const char *name)
+{
+  if (!strcmp(name, "grey") || !strcmp(name, "greyscale"))
+    loutput->palette = &lstopo_grey_palette;
+  else if (!strcmp(name, "colors") || !strcmp(name, "default"))
+    loutput->palette = &lstopo_main_palette;
+  else
+    fprintf(stderr, "Unrecognized palette name `%s', ignoring\n", name);
 }
 
 
