@@ -557,6 +557,7 @@ void usage(const char *name, FILE *where)
   fprintf (where, "  --no-legend           Remove all text legend lines at the bottom\n");
   fprintf (where, "  --no-default-legend   Remove default text legend lines at the bottom\n");
   fprintf (where, "  --append-legend <s>   Append a new line of text at the bottom of the legend\n");
+  fprintf (where, "  --grey --palette grey Use greyscale instead of colors\n");
   fprintf (where, "  --binding-color none    Do not colorize PU and NUMA nodes according to the binding\n");
   fprintf (where, "  --disallowed-color none Do not colorize disallowed PU and NUMA nodes\n");
   fprintf (where, "  --top-color <none|#xxyyzz> Change task background color for --top\n");
@@ -1216,6 +1217,15 @@ main (int argc, char *argv[])
         }
       }
 
+      else if (!strcmp (argv[0], "--grey") || !strcmp (argv[0], "--greyscale"))
+        lstopo_palette_select(&loutput, argv[0]+2);
+
+      else if (!strcmp (argv[0], "--palette")) {
+	if (argc < 2)
+	  goto out_usagefailure;
+        lstopo_palette_select(&loutput, argv[1]);
+	opt = 1;
+      }
       else if (!strcmp (argv[0], "--binding-color")) {
 	if (argc < 2)
 	  goto out_usagefailure;
