@@ -188,6 +188,7 @@ struct lstopo_color_palette {
 };
 
 extern void lstopo_palette_init(struct lstopo_output *loutput);
+extern void lstopo_palette_select(struct lstopo_output *loutput, const char *name);
 
 struct lstopo_style {
   struct lstopo_color
